date picker overflow fix

--- a/src/app/modals/measurement-chart/measurement-chart.component.scss
+++ b/src/app/modals/measurement-chart/measurement-chart.component.scss
@@ -1,1 +1,17 @@
-bs-datepicker-container { z-index: 3000; transform: none !important; top: 135px !important; left: 25px !important; }
+bs-datepicker-container {
+  z-index: 3000;
+  transform: none !important;
+  top: 70px !important;
+  left: 25px !important;
+}
+.chart-modal-header {
+  display: flex;
+  align-items: baseline;
+}
+.chart-modal-header div:nth-child(1) {
+  margin-right: 5%;
+}
+.chart-modal-header input {
+    max-width: 35%;
+  }
+  
